--- a/UnityDemo/packages.config
+++ b/UnityDemo/packages.config
@@ -3,6 +3,8 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="Unity" version="5.10.3" targetFramework="net461" />
   <package id="Unity.Abstractions" version="4.1.1" targetFramework="net461" />
+  <package id="Unity.Configuration" version="5.10.0" targetFramework="net461" />
   <package id="Unity.Container" version="5.10.0" targetFramework="net461" />
   <package id="Unity.Interception" version="5.10.0" targetFramework="net461" />
+  <package id="Unity.Interception.Configuration" version="5.10.0" targetFramework="net461" />
 </packages>
